--- a/DemostracionesPRYE/main.tex
+++ b/DemostracionesPRYE/main.tex
@@ -3,6 +3,7 @@
 \usepackage[arrows]{logicDG}
 \usepackage{calcDG}
 \usepackage{analysis}
+\usepackage{nicefrac}
 \usepackage{amsfonts}
 \usepackage{upgreek}
 \usepackage{mathrsfs}
