Cambios en nombres de secciones y estructura

--- a/DemostracionesPRYE/DistContinuas.tex
+++ b/DemostracionesPRYE/DistContinuas.tex
@@ -1,5 +1,5 @@
-\section{Distribuciones Continuas}
-\subsection{Chi-cuadrada}
+\subsection{Distribuciones Continuas}
+\subsubsection{Chi-cuadrada}
 Sea X una variable aleatoria tal que $X\sim\chi^2(v)$, entonces su $fdd$
 \[
     F(x) = \frac{1}{2^{\nicefrac{v}{2}}\Gamma\left(\frac{v}{2}\right)}x^{\left(\nicefrac{v}{2}\right)-1}e^{\nicefrac{-x}{2}}
