--- a/DemostracionesPRYE/propiedades_var_E.tex
+++ b/DemostracionesPRYE/propiedades_var_E.tex
@@ -1,4 +1,7 @@
-\section{Propiedades Var y E}
+\section{Propiedades de la Varianza y el Valor Esperado}
+
+% Toca hacer un archivo para propiedades de varianza y otro para valor esperado
+% que se vea parecido a Distribuciones.tex
 \begin{Demo}
     Por definición $Var(X) = E(X - \mu)^2$ donde $\mu = E(X) = \int_{-\infty}^{\infty}xf(x)dx$ 
     entonces $Var(X) = \int_{-\infty}^{\infty}(x-\mu)^2 f(x)dx$.
