--- a/DemostracionesPRYE/DistDiscretas.tex
+++ b/DemostracionesPRYE/DistDiscretas.tex
@@ -1,4 +1,10 @@
 \subsection{Distribuciones Discretas}
+Las distribuciones discretas son aquellas cuyas funciones de masa tienen
+dominio en los enteros. Este hecho se asumirá a lo largo de
+las definiciones y demostraciones a cerca de estas distribuciones.
+De no ser especificado el valor de una función de masa en algún
+subconjunto de $\Z$, se asumirá un como nulo.
+
 \subsubsection{Binomial}
 \label{dist:binom}
 Supóngase que se realiza un experimento el cual tiene como posible
