--- a/DemostracionesPRYE/DistDiscretas.tex
+++ b/DemostracionesPRYE/DistDiscretas.tex
@@ -21,14 +21,15 @@ Entonces
   Sea $X$ una variable aleatoria discreta. $X$ sigue una distribución
   binomial con parámetros $n$ y $p$ ($n\in\Z^+, p\in[0,1]$), denotada por $B(n,p)$,
   cuando su función de masa es
-  \[f(x) = P(X=x) = B(n,p)(x) = \binom{n}{x}p^x(1-p)^{n-x}\]
+  \[f(x) = P(X=x) = B(n,p)(x) = \binom{n}{x}p^x(1-p)^{n-x}
+  \qquad(0\leq x \leq n)\]
 \end{Def}
 
 \begin{Teo}
   Sea $X\sim B(n,p)$. Entonces
   \begin{enumerate}
     \item Para todo $x\in\Z$ con $0\leq x\leq n$, $P(X=x) \geq 0$.
-    \item $\sum_{x=0}^nP(X=x) = 1$.
+    \item $\sum_{x\in\Z}P(X=x) = 1$.
     \item $\text{E}[X] = np$.
     \item $\text{Var}[X]=np(1-p)$.
   \end{enumerate}
@@ -128,8 +129,8 @@ $n$ objetos tomados. Entonces
   hipergeométrica con parámetros $N,K,n$ ($N,K,n\in\Z^+,K\leq N, n\leq N$),
   denotada por $Hg(N,K,n)$, cuando su función de masa es
   \[
-    f(x)=P(X=x)=\dfrac{\binom{K}{x}\binom{N-K}{n-x}}{\binom{N}{n}},\qquad
-    \max\{0,n+K-N\} \leq x \leq \min\{K,n\}
+    f(x)=P(X=x)=\dfrac{\binom{K}{x}\binom{N-K}{n-x}}{\binom{N}{n}}\qquad
+    (\max\{0,n+K-N\} \leq x \leq \min\{K,n\})
   \]
 \end{Def}
 
@@ -187,7 +188,7 @@ sobre la combinatoria.
   Sea $X\sim Hg(N,K,n)$. Entonces,
   \begin{enumerate}
     \item para todo $x\in\Z$ con $0\leq x\leq n$, $P(X=x) \geq 0$.
-    \item $\sum_{x=0}^nP(X=x) = 1$.
+    \item $\sum_{x\in\Z}P(X=x) = 1$.
     \item $\text{E}[X]=\frac{nK}{N}$.
     \item $\text{Var}[X] = \frac{n\,K(N-K)(N-n)}{N^2(N-1)}$.
   \end{enumerate}
@@ -257,6 +258,7 @@ sobre la combinatoria.
   \end{enumerate}
 \end{Demo}
 
+\subsubsection{Uniforme Discreta}
 Algunas distribuciones surgen por la función de masa que las define, más que
 por la similitud con un evento real, esto debido a resultados conocidos
 sobre los enteros en este caso.
@@ -276,7 +278,7 @@ sobre los enteros en este caso.
     \item $\text{Var}[X] = \frac{(m-n+1)^2-1}{12}$
   \end{enumerate}
 \end{Teo}
-\begin{Demo}
+\begin{Demo}~
   \begin{enumerate}
     \item Se sigue inmediatamente de la definición.
     \item~
@@ -330,5 +332,80 @@ sobre los enteros en este caso.
         & \frac{(m-n+1)^2-1}{12}
     \end{longderivation}
   \end{enumerate}
+\end{Demo}
+
+\subsubsection{Poisson}
+Recordando que $e^x=\sum_{n=0}^\infty\frac{x^n}{n!}$, y que esta es una función
+creciente cuyo valor es estrictamente positivo, se genera una función la cual
+cumple la definición de función de masa, obteniendo la siguiente distribución.
+\begin{Def}
+  Sea $X$ una variable aleatoria discreta. $X$ sigue una distribución
+  de Poisson con parámetro $\lambda\in\R^+$, denotada por $\text{Pois}(\lambda)$,
+  cuando su función de masa es
+  \[f(x) = P(X=x) = \frac{\lambda^xe^{-\lambda}}{x!} \qquad (x\in\N)\]
+\end{Def}
+\begin{Teo}
+  Sea $X\sim\text{Pois}(\lambda)$. Entonces,
+  \begin{enumerate}
+    \item Para todo $x\in\Z$, $P(X=x)\geq0$.
+    \item $\sum_{x\in\Z}P(X=x)=1$.
+    \item $\text{E}[X] = \lambda$.
+    \item $\text{Var}[X]=\lambda$.
+  \end{enumerate}
+\end{Teo}
+\begin{Demo}~
+  \begin{enumerate}
+    \item Sea $x\in\N$. Entonces
+    \[P(X=x) = \frac{\lambda^xe^{-\lambda}}{x!}\]
+    Como los términos involucrados son no negativos, se concluye que $P(X=x)\geq0$.
+    \item~
+    \begin{longderivation}<1>
+        & \sum_{x=0}^\infty\frac{\lambda^xe^{-\lambda}}{x!}\\
+      =\\
+        & e^{-\lambda}\sum_{x=0}^\infty\frac{\lambda^x}{x!}\\
+      =\\
+        & e^{-\lambda}\,e^\lambda\\
+      =\\
+        & 1
+    \end{longderivation}
+    \item~
+    \begin{longderivation}<1>
+        & \sum_{n=0}^\infty x\frac{\lambda^xe^{-\lambda}}{x!}\\
+      =\\
+        & \sum_{n=1}^\infty\frac{\lambda^xe^{-\lambda}}{(x-1)!}\\
+      =\\
+        & \lambda e^{-\lambda}\sum_{x=0}^\infty\frac{\lambda^x}{x!}\\
+      =\\
+        & \lambda
+    \end{longderivation}
+    \item~
+    \begin{longderivation}<1>
+        & \sum_{x=0}^\infty x^2\frac{\lambda^xe^{-\lambda}}{x!} - \lambda^2\\
+      =\\
+        & \sum_{n=1}^\infty x\frac{\lambda^xe^{-\lambda}}{(x-1)!} - \lambda^2\\
+      =\\
+        & \lambda\sum_{n=0}^\infty x\frac{\lambda^xe^{-\lambda}}{x!}
+        + \lambda\sum_{n=0}^\infty \frac{\lambda^xe^{-\lambda}}{x!}
+        - \lambda^2\\
+      =\\
+        & \lambda^2 + \lambda - \lambda^2\\
+      =\\
+        & \lambda
+    \end{longderivation}
+  \end{enumerate}
+
+  Para finalizar, se mostrará la validez de los procedimientos usados para
+  estos cálculos. Se afirma que la serie $\sum_x x^t \frac{\lambda^x}{x!}$
+  converge para todo $t\in\R$.
+  Por el criterio de la razón, cuando $x\to\infty$,
+  \[
+    \left|(x+1)^t\frac{\lambda^{x+1}e^\lambda}{(x+1)!}\,
+    \frac{x!}{x^t\lambda^x}\right|
+    =
+    \left(1 + \frac{1}{x}\right)^t\,\frac{\lambda}{x+1}
+    \to 0 < 1
+  \]
+  La convergencia de la serie permite el reordenamiento de la misma y
+  la separación en sumas.
 \end{Demo}
 \clearpage
