--- a/DemostracionesPRYE/propiedades_var_E.tex
+++ b/DemostracionesPRYE/propiedades_var_E.tex
@@ -1,12 +1,3 @@
 \section{Propiedades de la Varianza y el Valor Esperado}
-
-% Toca hacer un archivo para propiedades de varianza y otro para valor esperado
-% que se vea parecido a Distribuciones.tex
-\begin{Demo}
-    Por definición $Var(X) = E(X - \mu)^2$ donde $\mu = E(X) = \int_{-\infty}^{\infty}xf(x)dx$ 
-    entonces $Var(X) = \int_{-\infty}^{\infty}(x-\mu)^2 f(x)dx$.
-
-    Dado que $(x-\mu)^2 \geq 0$ y $f(x) \geq 0$ para toda función de densidad, entonces
-    la integral siempre es mayor que cero
-\end{Demo}
-\clearpage
+\input{propE.tex}
+\input{propVar.tex}
