--- a/DemostracionesPRYE/Probabilidad.tex
+++ b/DemostracionesPRYE/Probabilidad.tex
@@ -69,7 +69,7 @@ Por último, recordar que
   definición recursiva y para $n=3$ fue el desarrollo anterior.
   Para el paso inductivo, supóngase que la propiedad se mantiene hasta
   un valor $n$.
-\begin{longderivation}
+\begin{longderivation}<1>
     & {P\left(\bigcup_{i=1}^{n+1} A_i\right)}\\
   =\\
     & {
@@ -105,7 +105,6 @@ Por último, recordar que
     \item $A^c$ y $B$ son independientes.
   \end{enumerate}
 \end{Teo}
-\clearpage
 \begin{Demo}
   \begin{enumerate}
     Supóngase $A$ y $B$ eventos independientes de un espacio muestral.
@@ -149,7 +148,6 @@ Por último, recordar que
       =\\
         & {P(B)\,P(A^c)}
     \end{longderivation}
-    
     Así, los eventos $A^c$ y $B$ también son independientes.
   \end{enumerate}
 \end{Demo}
