distribución F, orden de documentos

--- a/DemostracionesPRYE/DistDiscretas.tex
+++ b/DemostracionesPRYE/DistDiscretas.tex
@@ -5,407 +5,8 @@ las definiciones y demostraciones a cerca de estas distribuciones.
 De no ser especificado el valor de una función de masa en algún
 subconjunto de $\Z$, se asumirá un como nulo.
 
-\subsubsection{Binomial}
-\label{dist:binom}
-Supóngase que se realiza un experimento el cual tiene como posible
-resultado $a$ o $b$ exclusivamente, y además, el resultado
-de realizar nuevamente el experimento es independiente al
-resultado anterior. Dado que $a$ y $b$ son los únicos resultados,
-para un único experimento, se debe tener que
-$P(a) = 1 - P(b)$. Sea $p=P(a)$. Supóngase que
-este experimento es realizado $n$ veces. Se define una variable
-aleatoria $X$ correspondiente a la cantidad de ocurrencias de $a$.
-Entonces
-\[P(X=x) = \binom{n}{x}p^x(1-p)^{n-x}\]
-\begin{Def}
-  Sea $X$ una variable aleatoria discreta. $X$ sigue una distribución
-  binomial con parámetros $n$ y $p$ ($n\in\Z^+, p\in[0,1]$), denotada por $B(n,p)$,
-  cuando su función de masa es
-  \[f(x) = P(X=x) = B(n,p)(x) = \binom{n}{x}p^x(1-p)^{n-x}
-  \qquad(0\leq x \leq n)\]
-\end{Def}
-
-\begin{Teo}
-  Sea $X\sim B(n,p)$. Entonces
-  \begin{enumerate}
-    \item Para todo $x\in\Z$ con $0\leq x\leq n$, $P(X=x) \geq 0$.
-    \item $\sum_{x\in\Z}P(X=x) = 1$.
-    \item $\text{E}[X] = np$.
-    \item $\text{Var}[X]=np(1-p)$.
-  \end{enumerate}
-\end{Teo}
-\begin{Demo}
-  Desarrollando ambos valores, y recordando el teorema del binomio\dots
-  \begin{enumerate}
-    \item Sea $x\in\Z$ con $0\leq x\leq n$. Recordando que
-    \[P(X=x) = \binom{n}{x}p^x(1-p)^{n-x}\]
-    Dado todos los términos de la expresión son no negativos, se concluye que
-    $P(X=x)\geq0$
-    \item~
-    \begin{longderivation}
-        & \sum_{x=0}^nP(X=x)\\
-      =\\
-        & \sum_{x=0}^n\binom{n}{x}p^x(1-p)^{n-x}\\
-      =\\
-        & (p + 1 - p)^n\\
-      =\\
-        1
-    \end{longderivation}
-    \item~
-    \begin{longderivation}<0.8>
-        & {\text{E}[X]}\\
-      =\\
-        & {\sum_{x=0}^nx\binom{n}{x}p^x(1-p)^{n-x}}\\
-      =\\
-        & {np\sum_{x=1}^n\frac{(n-1)!}{(n-k)!\,(x-1)!}p^x(1-p)^{n-x}}\\
-      =\\
-        & {np\sum_{x=0}^{n-1}\binom{n-1}{x}p^x(1-p)^{n-1-x}}\\
-      =\\
-        & {np\,(p+1-p)^{n-1}}\\
-      =\\
-        & {np}
-    \end{longderivation}
-    \item~
-    \begin{longderivation}<0.8>
-        & {\text{Var}[X]}\\
-      =\\
-        & {\text{E}[X^2] - \text{E}^2[X]}\\
-      =\\
-        & {\sum_{x=0}^nx^2\binom{n}{x}p^x(1-p)^{n-x} - (np)^2}\\
-      =\\
-        & {np\left[
-          \sum_{x=1}^nx\binom{n-1}{x-1}p^{x-1}(1-p)^{n-x} - np
-        \right]}\\
-      =\\
-        & {np\left[
-          \sum_{x=0}^{n-1}(x+1)\binom{n-1}{x}p^x(1-p)^{n-1-x} - np
-        \right]}\\
-      =\\
-        & {np\left[
-          \sum_{x=0}^{n-1}x\binom{n-1}{x}p^x(1-p)^{n-1-x}
-          +\sum_{x=0}^{n-1}\binom{n-1}{x}p^x(1-p)^{n-1-x}
-          -np
-        \right]}\\
-      =\\
-        & {np\left[
-          p(n-1)\sum_{x=1}^{n-1}\binom{n-2}{x-1}p^{x-1}(1-p)^{n-1-x}+1-np
-        \right]}\\
-      =\\
-        & {np\left[
-          p(n-1)\sum_{x=0}^{n-2}\binom{n-2}{x}p^x(1-p)^{n-2-x}+1-np
-        \right]}\\
-      =\\
-        & {np[p(n-1)+1-np]}\\
-      =\\
-        & {np(1-p)}
-    \end{longderivation}
-    Este argumento es válido siempre que $n\geq 2$. Si $n<2$, entonces $n=1$ y
-    \begin{longderivation}<0.8>
-        & \text{Var}[X]\\
-      =\\
-        & \text{E}[X^2] - \text{E}^2[X]\\
-      =\\
-        & \sum_{x=0}^1x^2\binom{1}{x}p^x(1-p)^{1-x} - p^2\\
-      =\\
-        & p - p^2\\
-      =\\
-        & p\,(1-p)
-    \end{longderivation}
-    Así, el resultado se mantiene para todo $n\in\Z^+$
-  \end{enumerate}
-\end{Demo}
-\subsubsection{Hipergeométrica}
-\label{dist:hip}
-Supóngase que se tienen dos tipos de objetos, $a$ y $b$ en un total de
-$N$ objetos exclusivamente de estos dos tipos. Sea $K$ el número de
-objetos de tipo $a$ en el total de los $N$ objetos, es decir
-hay $N-K$ objetos de tipo $b$. Supóngase que se toman ahora $n$
-objetos del total ($N$). Se define una variable aleatoria $X$
-correspondiente al número de objetos de tipo $a$ en los
-$n$ objetos tomados. Entonces
-\[P(X=x) = \dfrac{\binom{K}{x}\binom{N-K}{n-x}}{\binom{N}{n}}\]
-\begin{Def}
-  Sea $X$ una variable aleatoria discreta. $X$ sigue una distribución
-  hipergeométrica con parámetros $N,K,n$ ($N,K,n\in\Z^+,K\leq N, n\leq N$),
-  denotada por $Hg(N,K,n)$, cuando su función de masa es
-  \[
-    f(x)=P(X=x)=\dfrac{\binom{K}{x}\binom{N-K}{n-x}}{\binom{N}{n}}\qquad
-    (\max\{0,n+K-N\} \leq x \leq \min\{K,n\})
-  \]
-\end{Def}
-
-La razón de esta condición para $x$ está en que tenga sentido para lo
-que se está representando. Por un lado, no tiene sentido pensar en la
-probabilidad de tomar más objetos de tipo $a$ de los que hay en el total
-de la muestra o tomar más objetos de tipo $a$ del total de estos.
-De la misma forma, no tiene sentido tomar una cantidad negativa
-de objetos tipo $a$, o tomar una cantidad de objetos tipo $a$
-de forma que haya una cantidad negativa de objetos tipo $b$ para completar
-los $n$ objetos o más objetos de tipo $b$ de los que hay en total.
-De forma más concreta, se pueden ver las condiciones de $x$ dada la
-expresión de la función de masa presentada.
-\begin{longderivation}<0.8>
-    & 0\leq x\leq K \quad\land\quad 0\leq n-x\leq N-K\\
-  \iff\\
-    & 0\leq x\leq K \quad\land\quad n+K-N\leq x\leq n\\
-  \iff\\
-    & \max\{0,n+K-N\}\leq x\leq\min\{K,n\}
-\end{longderivation}
-Sin embargo, tomando la convención de que $\binom{n}{k} = 0$ cuando $k>n$,
-se puede tomar a $x$ entre $0$ y $n$.
-
-Para demostrar la validez de esta función de masa, hace falta un resultado
-sobre la combinatoria.
-\begin{Lema}[Identidad de Vandermonde]
-  Sean $m,n,k\in\Z$ no negativos. Entonces
-  \[\binom{m+n}{k} = \sum_{r=0}^k\binom{m}{r}\binom{n}{k-r}\]
-  Esta identidad tiene sentido tomando la convención mencionada anteriormente.
-\end{Lema}
-\begin{Demo}
-  La demostración se hará por inducción sobre $m$, tomando $k,n$ como
-  enteros no negativos arbitrarios. Caso base ($m=0$):
-  \[\binom{0+n}{k} = \sum_{r=0}^k\binom{0}{r}\binom{n}{k-r}=\binom{n}{k}\]
-  Paso inductivo: sea $k\in\Z$ con $k\geq1$ y supóngase que la propiedad se mantiene
-  para todo entero no negativo hasta $k$. (Para $k=0$ la propiedad es trivial)
-  \begin{longderivation}
-      & \binom{m+n}{k+1}\\
-    =\\
-      & \binom{m+n}{k} + \binom{m+n}{k-1}\\
-    =\\
-      & \sum_{r=0}^k\binom{m}{r}\binom{n}{k-r} +
-      \sum_{r=0}^{k-1}\binom{m}{r}\binom{n}{k-1-r}\\
-    =\\
-      & \binom{m}{k} + 
-      \sum_{r=0}^{k-1}\binom{m}{r}\left(\binom{n}{k-r} + \binom{n}{k-1-r}\right)\\
-    =\\
-      & \binom{m}{n} + \sum_{k=0}^{k-1}\binom{m}{r}\binom{n}{k-r}\\
-    =\\
-      & \sum_{k=0}^k \binom{m}{k}\binom{n}{k-r}
-  \end{longderivation}
-\end{Demo}
-
-\begin{Teo}
-  Sea $X\sim Hg(N,K,n)$. Entonces,
-  \begin{enumerate}
-    \item para todo $x\in\Z$ con $0\leq x\leq n$, $P(X=x) \geq 0$.
-    \item $\sum_{x\in\Z}P(X=x) = 1$.
-    \item $\text{E}[X]=\frac{nK}{N}$.
-    \item $\text{Var}[X] = \frac{n\,K(N-K)(N-n)}{N^2(N-1)}$.
-  \end{enumerate}
-\end{Teo}
-\begin{Demo}~
-  \begin{enumerate}
-    \item Sea $x\in\Z$ con $0\leq x\leq n$. Recordando que
-    \[P(X=x) = \dfrac{\binom{K}{x}\binom{N-K}{n-x}}{\binom{N}{n}}\]
-    dado que todos los términos de la expresión son no negativos, se
-    concluye que $P(X=x)\geq0$
-    \item ~
-    \begin{longderivation}
-        & \sum_{x=0}^nP(X=x)\\
-      =\\
-        & \sum_{x=0}^n\dfrac{\binom{K}{x}\binom{N-K}{n-x}}{\binom{N}{n}}\\
-      =\\
-        & \dfrac{1}{\binom{N}{n}}\sum_{x=0}^n\binom{K}{x}\binom{N-K}{n-x}\\
-      =\\
-        & \dfrac{\binom{N}{n}}{\binom{N}{n}}\\
-      =\\
-        & 1
-    \end{longderivation}
-    \item~
-    \begin{longderivation}
-        & \text{E}[X]\\
-      =\\
-        & \sum_{x=0}^nx\dfrac{\binom{K}{x}\binom{N-K}{n-x}}{\binom{N}{n}}\\
-      =\\
-        & \dfrac{1}{\binom{N}{n}}\sum_{x=0}^nx\binom{K}{x}\binom{N-K}{n-x}\\
-      =\\
-        & \dfrac{K}{\binom{N}{n}}\sum_{x=1}^n\binom{K-1}{x-1}\binom{N-K}{n-x}\\
-      =\\
-        & \dfrac{K}{\binom{N}{n}}\sum_{x=0}^{n-1}\binom{K-1}{x}\binom{N-K}{n-x-1}\\
-      =\\
-        & \dfrac{K}{\binom{N}{n}}\binom{N-1}{n-1}\\
-      =\\
-        & \frac{K\,n}{N}
-    \end{longderivation}
-    \item~
-    \begin{longderivation}
-        & \text{Var}[X]\\
-      =\\
-        & \text{E}[X^2] - \text{E}[X] + \text{E}[X] - \text{E}^2[X]\\
-      =\\
-        & \dfrac{1}{\binom{N}{n}}\sum_{x=0}^nx^2\binom{K}{x}\binom{N-K}{n-x}
-        - \dfrac{1}{\binom{N}{n}}\sum_{x=0}^nx\binom{K}{x}\binom{N-K}{n-x}
-        + \frac{n\,K}{N} - \frac{n^2\,K^2}{N^2}\\
-      =\\
-        & \dfrac{K}{\binom{N}{n}}\left[
-          \sum_{x=0}^{n-1}x\binom{K-1}{x-1}\binom{N-K}{n-x-1} -
-          \sum_{x=0}^{n-1}\binom{K-1}{x-1}\binom{N-K}{n-x-1}
-        \right]
-        + \frac{n\,K}{N} - \frac{n^2\,K^2}{N^2}\\
-      =\\
-        & \dfrac{K(K-1)}{\binom{N}{n}}
-          \sum_{x=0}^{n-2}\binom{K-2}{x}\binom{N-K}{n-x-2}
-        + \frac{n\,K}{N} - \frac{n^2\,K^2}{N^2}\\
-      =\\
-        & \dfrac{K(K-1)}{\binom{N}{n}}\binom{N-2}{n-2}
-        + \frac{n\,K}{N} - \frac{n^2\,K^2}{N^2}\\
-      =\\
-        & \frac{K(K-1)n(n-1)}{N(N-1)}
-        + \frac{n\,K}{N} - \frac{n^2\,K^2}{N^2}\\
-      =\\
-        & \frac{n\,K(N-K)(N-n)}{N^2(N-1)}
-    \end{longderivation}
-  \end{enumerate}
-\end{Demo}
-
-\subsubsection{Uniforme Discreta}
-Algunas distribuciones surgen por la función de masa que las define, más que
-por la similitud con un evento real, esto debido a resultados conocidos
-sobre los enteros en este caso.
-
-\begin{Def}
-  Sea $X$ una variable aleatoria discreta. $X$ sigue una distribución uniforme
-  discreta, de parámetros $n,m\in\Z$ ($n < m$), denotada por $U_d(n,m)$,
-  cuando su función de masa es
-  \[f(x) = P(X=x) = \frac{1}{m-n+1}\qquad (n\leq x\leq m)\]
-\end{Def}
-\begin{Teo}
-  Sea $X\sim U(n,m)$. Entonces,
-  \begin{enumerate}
-    \item Para todo $x\in\Z$, $P(X=x)\geq0$.
-    \item $\sum_{x\in\Z}P(X=x) = 1$.
-    \item $\text{E}[X] = \frac{n+m}{2}$
-    \item $\text{Var}[X] = \frac{(m-n+1)^2-1}{12}$
-  \end{enumerate}
-\end{Teo}
-\begin{Demo}~
-  \begin{enumerate}
-    \item Se sigue inmediatamente de la definición.
-    \item~
-    \[\sum_{x=n}^m \frac{1}{n+m+1} = \frac{n+m-1}{n+m-1}=1\]
-    \item~
-    \begin{longderivation}
-        & \text{E}[X]\\
-      =\\
-        & \sum_{x=n}^m\frac{x}{m-n+1}\\
-      =\\
-        & \frac{1}{m-n+1}\sum_{x=1}^{m-n+1}(x+n-1)\\
-      =\\
-        & \frac{1}{m-n+1}\left[\frac{(m-n+1)(m-n+2)}{2} + n(m-n+1) - (m-n+1)\right]\\
-      =\\
-        & \frac{m-n+2 + 2n - 2}{2}\\
-      =\\
-        & \frac{m+n}{2}
-    \end{longderivation}
-    \item Tomando $N=m-n+1$.
-    \begin{longderivation}
-        & \text{Var}[X]\\
-      =\\
-        & \text{E}[X^2] - \text{E}^2[X]\\
-      =\\
-        & \sum_{x=n}^m\frac{x^2}{m-n+1} - \left(\frac{n+m}{2}\right)^2\\
-      =\\
-        & \frac{1}{N}\sum_{x=1}^{m-n+1}(x+n-1)^2 - \left(\frac{n+m}{2}\right)^2\\
-      =\\
-        & \frac{1}{N}\left[\frac{N(N+1)(2N+1)}{6} + 2(n-1)\frac{N(N+1)}{2} + N(n-1)^2\right]
-        - \left(\frac{n+m}{2}\right)^2\\
-      =\\
-        & (N+1)\frac{2N+1+6n - 6}{6} + (n-1)^2 - \left(\frac{n+m}{2}\right)^2\\
-      =\\
-        & (N+1)\frac{2N + 6n - 5}{6} + \left(n - 1 - \frac{n+m}{2}\right)
-        \left(n-1+\frac{n+m}{2}\right)\\
-      =\\
-        & (N+1)\frac{2N + 6n - 5}{6}
-        + \left(\frac{n-m-2}{2}\right)\left(\frac{3n+m-2}{2}\right)\\
-      =\\
-        & (N+1)\frac{2N + 6n - 5}{6} + \left(\frac{m-n+2}{2}\right)
-        \left(\frac{2-3n-m}{2}\right)\\
-      =\\
-        & (N+1)\frac{2(2N + 6n - 5) + 3(2 - 3n + m)}{12}\\
-      =\\
-        & (N+1)\frac{4N - 3n - 3m -4}{12}\\
-      =\\
-        & (N+1)\frac{4m-4n+4-3n-3m-4}{12}\\
-      =\\
-        & \frac{N^2 - 1}{12}\\
-      =\\
-        & \frac{(m-n+1)^2-1}{12}
-    \end{longderivation}
-  \end{enumerate}
-\end{Demo}
-
-\subsubsection{Poisson}
-Recordando que $e^x=\sum_{n=0}^\infty\frac{x^n}{n!}$, y que esta es una función
-creciente cuyo valor es estrictamente positivo, se genera una función la cual
-cumple la definición de función de masa, obteniendo la siguiente distribución.
-\begin{Def}
-  Sea $X$ una variable aleatoria discreta. $X$ sigue una distribución
-  de Poisson con parámetro $\lambda\in\R^+$, denotada por $\text{Pois}(\lambda)$,
-  cuando su función de masa es
-  \[f(x) = P(X=x) = \frac{\lambda^xe^{-\lambda}}{x!} \qquad (x\in\N)\]
-\end{Def}
-\begin{Teo}
-  Sea $X\sim\text{Pois}(\lambda)$. Entonces,
-  \begin{enumerate}
-    \item Para todo $x\in\Z$, $P(X=x)\geq0$.
-    \item $\sum_{x\in\Z}P(X=x)=1$.
-    \item $\text{E}[X] = \lambda$.
-    \item $\text{Var}[X]=\lambda$.
-  \end{enumerate}
-\end{Teo}
-\begin{Demo}~
-  \begin{enumerate}
-    \item Sea $x\in\N$. Entonces
-    \[P(X=x) = \frac{\lambda^xe^{-\lambda}}{x!}\]
-    Como los términos involucrados son no negativos, se concluye que $P(X=x)\geq0$.
-    \item~
-    \begin{longderivation}<1>
-        & \sum_{x=0}^\infty\frac{\lambda^xe^{-\lambda}}{x!}\\
-      =\\
-        & e^{-\lambda}\sum_{x=0}^\infty\frac{\lambda^x}{x!}\\
-      =\\
-        & e^{-\lambda}\,e^\lambda\\
-      =\\
-        & 1
-    \end{longderivation}
-    \item~
-    \begin{longderivation}<1>
-        & \sum_{n=0}^\infty x\frac{\lambda^xe^{-\lambda}}{x!}\\
-      =\\
-        & \sum_{n=1}^\infty\frac{\lambda^xe^{-\lambda}}{(x-1)!}\\
-      =\\
-        & \lambda e^{-\lambda}\sum_{x=0}^\infty\frac{\lambda^x}{x!}\\
-      =\\
-        & \lambda
-    \end{longderivation}
-    \item~
-    \begin{longderivation}<1>
-        & \sum_{x=0}^\infty x^2\frac{\lambda^xe^{-\lambda}}{x!} - \lambda^2\\
-      =\\
-        & \sum_{n=1}^\infty x\frac{\lambda^xe^{-\lambda}}{(x-1)!} - \lambda^2\\
-      =\\
-        & \lambda\sum_{n=0}^\infty x\frac{\lambda^xe^{-\lambda}}{x!}
-        + \lambda\sum_{n=0}^\infty \frac{\lambda^xe^{-\lambda}}{x!}
-        - \lambda^2\\
-      =\\
-        & \lambda^2 + \lambda - \lambda^2\\
-      =\\
-        & \lambda
-    \end{longderivation}
-  \end{enumerate}
-
-  Para finalizar, se mostrará la validez de los procedimientos usados para
-  estos cálculos. Se afirma que la serie $\sum_x x^t \frac{\lambda^x}{x!}$
-  converge para todo $t\in\R$.
-  Por el criterio de la razón, cuando $x\to\infty$,
-  \[
-    \left|(x+1)^t\frac{\lambda^{x+1}e^\lambda}{(x+1)!}\,
-    \frac{x!}{x^t\lambda^x}\right|
-    =
-    \left(1 + \frac{1}{x}\right)^t\,\frac{\lambda}{x+1}
-    \to 0 < 1
-  \]
-  La convergencia de la serie permite el reordenamiento de la misma y
-  la separación en sumas.
-\end{Demo}
+\input{Discretas/Binomial.tex}
+\input{Discretas/Hipergeom.tex}
+\input{Discretas/Uniforme.tex}
+\input{Discretas/Poisson.tex}
 \clearpage
