integral de Gauss

--- a/AnalisisNE/main.tex
+++ b/AnalisisNE/main.tex
@@ -15,6 +15,7 @@
 \usepackage{upgreek}
 \usepackage{amsthm}
 \usepackage{csquotes}
+\usepackage[a]{esvect}
 \usepackage{enumerate}
 \usepackage[sorting=none]{biblatex}
 \addbibresource{Referencias.bib}
