--- a/DemostracionesPRYE/DistContinuas.tex
+++ b/DemostracionesPRYE/DistContinuas.tex
@@ -1,3 +1,4 @@
 \subsection{Distribuciones Continuas}
+\input{Continuas/Normal.tex}
 \input{Continuas/Chi_cuadrada.tex}
 \input{Continuas/F_dist.tex}
