--- a/DemostracionesPRYE/main.tex
+++ b/DemostracionesPRYE/main.tex
@@ -4,6 +4,7 @@
 \usepackage{calcDG}
 \usepackage{analysis}
 \usepackage{nicefrac}
+\usepackage[a]{esvect}
 \usepackage{amsfonts}
 \usepackage{upgreek}
 \usepackage{mathrsfs}
