--- a/DemostracionesPRYE/Continuas/F_dist.tex
+++ b/DemostracionesPRYE/Continuas/F_dist.tex
@@ -18,12 +18,12 @@
   Recordando que $B$ hace referencia a la función beta.
 \end{Def}
 \begin{Teo}
-  Sea $T\sim T(u,v)$ y $f$ su función de masa. Entonces,
+  Sea $F\sim F(u,v)$ y $f$ su función de masa. Entonces,
   \begin{enumerate}
     \item Para todo $x\in\R$, $f(x) \geq 0$.
     \item $\int_{\R}f(x)\mathrm{d}x=1$.
-    \item $\text{E}[T]=\frac{v}{v-2} \qquad(v>2)$
-    \item $\text{Var}[T]=\frac{2v^2(u+v-2)}{u(v-2)^2(v-4)}\qquad(v>4)$
+    \item $\text{E}[F]=\frac{v}{v-2} \qquad(v>2)$
+    \item $\text{Var}[F]=\frac{2v^2(u+v-2)}{u(v-2)^2(v-4)}\qquad(v>4)$
   \end{enumerate}
 \end{Teo}
 \begin{Demo}~
