--- a/DemostracionesPRYE/Continuas/F_dist.tex
+++ b/DemostracionesPRYE/Continuas/F_dist.tex
@@ -2,7 +2,7 @@
 
 \begin{Def}
   Sean $F$ una variable aleatoria continua. $F$ tiene una distribución
-  $F$ de parámetros $u,v\in\R^+$, cuando su función de masa es
+  $F$ de parámetros $u,v\in\R^+$, cuando su función de densidad es
   \[f(x)=
   \dfrac{\Gamma\left(\frac{u+v}{2}\right)\left(\frac{u}{v}\right)^{\nicefrac{u}{2}}}
   {\Gamma\left(\frac{u}{2}\right)\Gamma\left(\frac{v}{2}\right)}
@@ -18,7 +18,7 @@
   Recordando que $B$ hace referencia a la función beta.
 \end{Def}
 \begin{Teo}
-  Sea $F\sim F(u,v)$ y $f$ su función de masa. Entonces,
+  Sea $F\sim F(u,v)$ y $f$ su función de densidad. Entonces,
   \begin{enumerate}
     \item Para todo $x\in\R$, $f(x) \geq 0$.
     \item $\int_{\R}f(x)\mathrm{d}x=1$.
@@ -32,10 +32,10 @@
     $x\in\R^+$, con lo que se concluye $f(x)\geq0$.
     \item Basta mostrar la siguiente igualdad
     \[
-      \Int[0,\infty]{
+      \int_0^\infty{
       \dfrac{x^{(\nicefrac{u}{2})-1}}
       {\left(1 + \frac{u}{v}x\right)^{\nicefrac{(u+v)}{2}}}
-      }{x}
+      }\diff{x}
       =
       \left(\frac{u}{v}\right)^{-\nicefrac{u}{2}}
       B\left(\frac{u}{2},\frac{v}{2}\right)
@@ -43,35 +43,35 @@
     Recordando que
     \[
       B\left(\frac{u}{2},\frac{v}{2}\right) =
-      \Int[0,1]{t^{(\nicefrac{u}{2})-1}(1-t)^{(\nicefrac{v}{2})-1}}{t}
+      \int_0^1{t^{(\nicefrac{u}{2})-1}(1-t)^{(\nicefrac{v}{2})-1}}\diff{t}
     \]
 
     El procedimiento inicia con el siguiente cambio de variable:
     \[\tan^2(\theta)=\frac{u}{v}x\]
     Cuando $x=0$, $\theta=0$ y cuando $x\to\infty$, $\theta\to\nicefrac{\pi}{2}$.
     Recordando que $\odv*{\tan^2(\theta)}{\theta}=2\tan(\theta)\sec^2(\theta)$,
-    se obtienes las siguientes igualdades
+    se obtienen las siguientes igualdades
     \begin{longderivation}
-        & \Int[0,\infty]{
+        & \int_0^\infty{
           \dfrac{x^{(\nicefrac{u}{2})-1}}
           {\left(1 + \frac{u}{v}x\right)^{\nicefrac{(u+v)}{2}}}
-          }{x}\\
+          }\diff{x}\\
       =\\
-        & 2\frac{n}{m}\Int[0,\nicefrac{\pi}{2}]{
+        & 2\frac{n}{m}\int_0^{\nicefrac{\pi}{2}}{
           \dfrac{\left(\frac{n}{m}\right)^{(\nicefrac{m}{2})-1}\tan^{m-2}(\theta)}
           {(1 + \tan^2(\theta))^{\nicefrac{(n+m)}{2}}}
           \tan(\theta)\sec^2(\theta)
-        }{\theta}\\
+        }\diff{\theta}\\
       =\\
         & 2\left(\frac{n}{m}\right)^{\nicefrac{m}{2}}
-        \Int[0,\nicefrac{\pi}{2}]{
+        \int_0^{\nicefrac{\pi}{2}}{
           \dfrac{\tan^{m-1}(\theta)\sec^2(\theta)}{\sec^{m+n}(\theta)}
-        }{\theta}\\
+        }\diff{\theta}\\
       =\\
         & 2\left(\frac{n}{m}\right)^{\nicefrac{m}{2}}
-        \Int[0,\nicefrac{\pi}{2}]{
+        \int_0^{\nicefrac{\pi}{2}}{
           \sin^{m-1}(\theta)\cos^{n-2}\cos(\theta)
-        }{\theta}
+        }\diff{\theta}
     \end{longderivation}
     Para continuar, se realiza el cambio de variable
     \[v=\sin(\theta)\]
@@ -81,14 +81,14 @@
     $\odv*{\sin(\theta)}{\theta} = \cos(\theta)$, se obtiene la siguiente igualdad
     \begin{longderivation}
         & 2\left(\frac{n}{m}\right)^{\nicefrac{m}{2}}
-        \Int[0,\nicefrac{\pi}{2}]{
+        \int_0^{\nicefrac{\pi}{2}}{
           \sin^{m-1}(\theta)\cos^{n-2}\cos(\theta)
-        }{\theta}\\
+        }\diff{\theta}\\
       =\\
         & 2\left(\frac{n}{m}\right)^{\nicefrac{m}{2}}
-        \Int[0,1]{
+        \int_0^1{
           v^{m-2}(1-v^2)^{(\nicefrac{n}{2})-1}v
-        }{v}
+        }\diff{v}
     \end{longderivation}
     Por último, ser realiza el cambio de variable
     \[t = v^2\]
@@ -96,14 +96,14 @@
     se obtienen las siguientes igualdades
     \begin{longderivation}
         & 2\left(\frac{n}{m}\right)^{\nicefrac{m}{2}}
-          \Int[0,1]{
+          \int_0^1{
             v^{m-2}(1-v^2)^{(\nicefrac{n}{2})-1}v
-          }{v}\\
+          }\diff{v}\\
       =\\
         & 2\left(\frac{n}{m}\right)^{\nicefrac{m}{2}}
-        \Int[0,1]{
+        \int_0^1{
           \frac{1}{2}t^{(\nicefrac{m}{2})-1}(1 - t)^{(\nicefrac{n}{2})-1}
-        }{t}\\
+        }\diff{t}\\
       =\\
         & \left(\frac{n}{m}\right)^{\nicefrac{m}{2}}
         B\left(\frac{u}{2},\frac{v}{2}\right)
