--- a/DemostracionesPRYE/Continuas/Normal.tex
+++ b/DemostracionesPRYE/Continuas/Normal.tex
@@ -1,7 +1,7 @@
 \subsubsection{Distribución Normal}
 \begin{Def}
   Sea $X$ una variable aleatoria continua. $X$ tiene distribución normal
-  de parámetros $\mu\in\R$, $\sigma^2\in\R^+$ cuando su función de masa es
+  de parámetros $\mu\in\R$, $\sigma^2\in\R^+$ cuando su función de densidad es
   \[
     f(x) = \dfrac{1}{\sqrt{2\pi\sigma^2}}
     e^{\nicefrac{(x-\mu)^2}{\left(2\sigma^2\right)}}
@@ -13,7 +13,7 @@
   Sean $X\sim N(\mu,\sigma^2)$ y $f$ la función de masa de $X$. Entonces,
   \begin{enumerate}
     \item Para todo $x\in\R$, $f(x) \geq 0$.
-    \item $\Int[\R]{f(x)}{x} = 1$.
+    \item $\int_{\R}{f(x)}\diff{x} = 1$.
     \item $\text{E}[X] = \mu$.
     \item $\text{Var}[X] = \sigma^2$.
   \end{enumerate}
@@ -21,17 +21,17 @@
 
 Para las integrales involucradas en los resultados del teorema es
 conveniente tener el siguiente resultado anterior a proceder con el teorema.
-\[I = \Int[\R]{e^{-x^2}}{x} = \sqrt{\pi}\]
+\[I = \int_\R e^{-x^2}\diff{x} = \sqrt{\pi}\]
 \begin{longderivation}
     & I^2\\
   =\\
-    & \left(\Int[\R]{e^{-x^2}}{x}\right)\left(\Int[\R]{e^{-x^2}}{x}\right)\\
+    & \left(\int_{\R}e^{-x^2}\diff{x}\right)\left(\int_{\R}e^{-x^2}\diff{x}\right)\\
   =\\
-    & \left(\Int[\R]{e^{-x^2}}{x}\right)\left(\Int[\R]{e^{-y^2}}{y}\right)\\
+    & \left(\int_{\R}e^{-x^2}\diff{x}\right)\left(\int_{\R}e^{-y^2}\diff{y}\right)\\
   =\\
-    & \Int[\R]{\Int[\R]{e^{-(x^2+y^2)}}{x}}{y}\\
+    & \int_{\R}\int_{\R}e^{-(x^2+y^2)}\diff{x,y}\\
   =\\
-    & \Int[\R^2]{e^{-(x^2+y^2)}}{x}\mathrm{d}y
+    & \int_{\R^2}e^{-(x^2+y^2)}\diff{x,y}
 \end{longderivation}
   Parametrizando $\R^2$ con la función
   \[
@@ -58,11 +58,11 @@ Dado que
 \[(x^2+y^2)\circ\vv{t(r,\theta)} = r^2\sin^2(\theta) + r^2\cos^2(\theta) = r^2\]
 La integral presentada se puede reescribir y desarrollar de la siguiente manera
 \begin{longderivation}
-    & \Int[0,\infty]{\Int[-\pi,\pi]{re^{-r^2}}{\theta}}{r}\\
+    & \int_0^\infty\int_{-\pi}^\pi re^{-r^2}\diff{\theta,r}\\
   =\\
-    & 2\pi\Int[0,\infty]{re^{-r^2}}{r}\\
+    & 2\pi\int_0^\infty re^{-r^2}\diff{r}\\
   \why[=]{Tomando $u=r^2$}\\
-    & \pi\Int[0,\infty]{e^{-u}}{u}\\
+    & \pi\int_0^\infty e^{-u}\diff{u}\\
   =\\
     & \pi
 \end{longderivation}
